<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_busca"
            android:icon="@drawable/ic_busca_produtos_24dp"
            android:title="@string/busca_produtos" />
        <item
            android:id="@+id/nav_lanchonete"
            android:icon="@drawable/ic_lanchonete_cinza_24dp"
            android:title="@string/lanchonetes" />
        <item
            android:id="@+id/nav_produto"
            android:icon="@drawable/ic_pizza"
            android:title="@string/produtos" />
        <item
            android:id="@+id/nav_logoff"
            android:icon="@drawable/ic_logout"
            android:title="@string/sair" />
        <!--
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Configurações" />
            -->
    </group>
</menu>
